fix dropdown colours on mobile

--- a/style/styles.scss
+++ b/style/styles.scss
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  background: linear-gradient(-90deg, $bluegrey, $maroon);
+  background: linear-gradient(-90deg, $bluegrey, $maroon) !important;
 }
 
 #top {
